data/derived/fa15/progs/unify/prog2872.ml.out
Characters 292-318:
  removeZero (add (padZero l1 l2), l2 );;
             ^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type int list
